v3/myK8s/ui/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-ui-deployment
  # namespace: todo-app
  labels:
    app: todo-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-ui
  template:
    metadata:
      labels:
        app: todo-ui
    spec:
      containers:
      - name: todo-ui-container
        image: localhost:32000/todo-ui:latest
        ports:
        - containerPort: 80
