v3/myK8s/ui/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-ui-service
  # namespace: todo-app
spec:
  type: NodePort
  ports:
   - protocol: TCP
     nodePort: 30002
     port: 8091
     targetPort: 80
  selector:
    app: todo-ui
